  - Speedimprovements in case we download mime-entities.
  - Added possibility to extract message/rfc822 attachments and store them as
    the original message in a folder. 
  - Right to left languages implementation initiated
  - Enable people with file_uploads = off to still send mail. Patch from Seth
    E. Randall.
  - Moved the generic_header hook back to page_header.php. bug #554278
  
Version 1.2.7 -- CVS
--------------------
  - fix for 'compose as new' link. bug #554886
  - fix charset format in the admin plugin. bug #550725
  - fix for errant '.' in default_folder_prefix. bug #551310
  - fix for folder names with '?' and '*'. bug # 559257, #552180
  - added the ability to search without the charset argument. #552288
  - Made /noselect node display optional. bug #554988, patch #452178 
  - Improved support for macosx IMAP server thanks Brian Haun
  - Added macosx friendly search, thanks Brian Haun bug #553038
  - Fixed word wrap problems when sending mail. bug #552961, #556143
  - Added possibility to use multiple compose windows without loss
    of attachements.
  - Fixed forward message/rfc822 attachments from a search 
  - Fix SpamCop plugin.
  - Fixed send MDN link.
  - Fixed dealing with \r\n and \n in smtp.php. 
  - Fixed to, cc, bcc arrays in message->header
  - Speed optimizements in generating message-lists.    
  - Fixed loss of attachment with html addressbook.
  - Fixed saving drafts with attachments

  
Version 1.2.6 -- April 29 2002 
--------------------
  - A complete MagicHTML rewrite since the existing codebase was
    causing too many XSS problems. Hopefully now Nick Cleaton will
    leave us alone. :) Testing credits go to Nick.
  - Fix for cross-site scripting vulnerability (bug #545933)
    Reported by Nick Cleaton.
  - Changing "emtpy" to "purge" for more clarity.
  - Fix for cross-site scripting vulnerability (bug #544658)
    Reported by Nick Cleaton.
  - Fix for incorrect word wrap in Opera (bug #495073)